...
                    onChanged: find.setQuery,
                    onEditingComplete: () {},
                    onSubmitted: (_) => find.next(),
                  ),
                ),
                IconButton(
                  tooltip: 'Close Find',
                  onPressed: close,
                  icon: const ShepIcon('close'),
                ),
              ],
            ),
            Row(
...
                  onPressed: find.hits.isEmpty || find.pending
                      ? null
                      : () => find.next(true),
                  icon: const ShepIcon('up'),
                ),
                IconButton(
                  tooltip: 'Next match',
                  onPressed: find.hits.isEmpty || find.pending
                      ? null
                      : () => find.next(),
                  icon: const ShepIcon('down'),
                ),
              ],
...
